fix nav overflow

--- a/styles/sprint-1-reflections.css
+++ b/styles/sprint-1-reflections.css
@@ -253,7 +253,7 @@ display: inline;
       font-weight: ;
       letter-spacing: 4px;
       text-shadow: 1px 0px 4px #44414600, 2px 0px 4px #ecd5ff04, 3px 0px 4px #ffd5ff00, 2px 0px 3px #882cd400, 2px 3px 15px #9b43d600, 2px 0px 15px, 5px 0px 125px, 20px 0vw 200px #d42cc900,40px 0vw 200px #d42cc900;
-padding-left: 25em;
+padding-left: 8em;
       padding-top: 2em;
     }
   
